user delete and update

--- a/src/app/common/nav/nav.component.html
+++ b/src/app/common/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="container position-sticky top-0">
+<div class="position-sticky top-0">
      <div class="px-3 py-2 text-bg-dark border-bottom">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
@@ -8,8 +8,8 @@
 
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2">Features</a></li>
-            <li><a href="#" class="nav-link px-2"  [routerLink]="['/view-all-book']">Viwe All Book</a></li>
+            <li><a href="#" class="nav-link px-2" [routerLink]="['/view-all-users']">Viwe All Users</a></li>
+            <li><a href="#" class="nav-link px-2" [routerLink]="['/view-all-book']">Viwe All Book</a></li>
             <li><a href="#" class="nav-link px-2">FAQs</a></li>
             <li><a href="#" class="nav-link px-2">About</a></li>
           </ul>
@@ -20,8 +20,6 @@
           </div>
         </div>
       </div>
-
-      
 
       <nav class="navbar navbar-light bg-blur ">
         <form class="form-inline">
@@ -38,7 +36,6 @@
         </form>
         <button type="button" class="btn btn-outline-primary">Add New Book</button>
       </nav>
-     
    </div>
 
    
