--- a/src/app/page/viwe-all-books/viwe-all-books.component.html
+++ b/src/app/page/viwe-all-books/viwe-all-books.component.html
@@ -1,5 +1,5 @@
+<app-nav></app-nav>
 
-<div class="table-responsive small container">
   <table class="table table-striped table-sm">
     <thead>
       <tr>
@@ -29,7 +29,7 @@
       </tr>
     </tbody>
   </table>
-</div>
+
 
 <!--Delete Modal -->
 
@@ -41,7 +41,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="mb-3">
-        <input type="text" value={{selectedBook?.title}} class="form-control" id="recipient-name">
+        <input type="text" value={{selectedBook?.title}} disabled class="form-control" id="recipient-name">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -57,7 +57,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Updata</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Updata Book Data</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
