--- a/src/app/page/viwe-all-books/viwe-all-books.component.html
+++ b/src/app/page/viwe-all-books/viwe-all-books.component.html
@@ -1,4 +1,21 @@
+<div class="position-sticky top-0">
 <app-nav></app-nav>
+<nav class="navbar navbar-light bg-blur ">
+  <form class="form-inline">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search..." aria-label="Search" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <button type="button" class="btn btn-outline-primary" id="basic-addon1">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="25" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+          </svg>
+      </button>
+      </div>
+    </div>
+  </form>
+  <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#addnewModal" >Add New Book</button>
+</nav>
+</div>
 
   <table class="table table-striped table-sm">
     <thead>
@@ -115,6 +132,68 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" (click)="saveBook()" data-bs-dismiss="modal">Confrom Updata</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--addnewbook-->
+
+<div class="modal fade" id="addnewModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Add new Book Data</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">ISBN</label>
+            <input type="text"  [(ngModel)]="newBook.isbn" [ngModelOptions]="{standalone:true}"  class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Title</label>
+            <input type="text"  [(ngModel)]="newBook.title" [ngModelOptions]="{standalone:true}" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Author</label>
+            <input type="text"  [(ngModel)]="newBook.author" [ngModelOptions]="{standalone:true}" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Category</label>
+            <input type="text"  [(ngModel)]="newBook.category" [ngModelOptions]="{standalone:true}" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Qty</label>
+            <input type="number" [(ngModel)]="newBook.qty" [ngModelOptions]="{standalone:true}" class="form-control" id="recipient-name">
+          </div>
+         
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" (click)="addBook()" class="btn btn-primary" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#Confromaddbook">Add Book</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Confromaddnewbook -->
+
+<div class="modal fade" id="Confromaddbook" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Confromation Add Book</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        New book added successfully
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
