Completed Login process

--- a/src/app/common/nav/nav.component.html
+++ b/src/app/common/nav/nav.component.html
@@ -15,8 +15,7 @@
           </ul>
     
           <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2" [routerLink]="['/login']">Login</button>
-            <button type="button" class="btn btn-primary" [routerLink]="['/sign-up']">Sign-up</button>
+            <button type="button" class="btn btn-outline-primary me-2" [routerLink]="['/login']">Log Out</button>
           </div>
         </div>
       </div>
