--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -5,11 +5,11 @@
 </svg></h1>
 
   <div class="form-floating">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"[(ngModel)]="loginObj.email" [ngModelOptions]="{standalone:true}">
     <label for="floatingInput">Email address</label>
   </div>
   <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+    <input type="password" class="form-control" id="floatingPassword" placeholder="Password"[(ngModel)]="loginObj.password" [ngModelOptions]="{standalone:true}">
     <label for="floatingPassword">Password</label>
   </div>
 
@@ -17,8 +17,13 @@
     <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
     <label class="form-check-label" for="flexCheckDefault">
       Remember me
-    </label>
+    </label> 
   </div>
-  <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+  <div>
+    <button class="btn btn-primary w-100 py-2" type="submit" (click)="login()">Sign in</button>
+  </div>
+  <div>
+    <button type="button" class="btn btn-outline-primary w-100 py-2" [routerLink]="['/sign-up']">Sign up</button>
+  </div>
   <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
 </form>
