Completed Home page

--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -23,7 +23,7 @@
     <button class="btn btn-primary w-100 py-2" type="submit" (click)="login()">Sign in</button>
   </div>
   <div>
-    <button type="button" class="btn btn-outline-primary w-100 py-2" [routerLink]="['/sign-up']">Sign up</button>
+    <button type="button" class="btn btn-outline-primary w-100 py-2" [routerLink]="['/sign-up']">Register</button>
   </div>
   <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
 </form>
