--- a/src/app/common/nav/nav.component.html
+++ b/src/app/common/nav/nav.component.html
@@ -7,7 +7,7 @@
           </a>
 
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="#" class="nav-link px-2 link-secondary" [routerLink]="['/home']">Home</a></li>
             <li><a href="#" class="nav-link px-2" [routerLink]="['/view-all-users']">Viwe All Users</a></li>
             <li><a href="#" class="nav-link px-2" [routerLink]="['/view-all-book']">Viwe All Book</a></li>
             <li><a href="#" class="nav-link px-2">FAQs</a></li>
