--- a/src/app/page/register/register.component.html
+++ b/src/app/page/register/register.component.html
@@ -83,14 +83,14 @@
 
           <hr class="my-4">
 
-          <button class="w-100 btn btn-primary btn-lg" type="submit" (click)="submitFrom()">Sign-up</button>
+          <button class="w-100 btn btn-primary btn-lg" type="submit" (click)="submitFrom()">Register</button>
         </form>
       </div>
     </div>
   </main>
 
   <footer class="my-5 pt-5 text-body-secondary text-center text-small">
-    <p class="mb-1">&copy; 2017–2024 Company Name</p>
+    <p class="mb-1">&copy; 2017–2024 H & S Company </p>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="#">Privacy</a></li>
       <li class="list-inline-item"><a href="#">Terms</a></li>
